--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,157 @@
-.App {
-  text-align: center;
+.AppWrap {
+  margin-top: 56px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/* navbar */
+nav {
+  box-shadow: 1px 1px 0 0 #0e5869;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.bg-purple {
+  background: #311b92;
+  color: #fff;
 }
 
-.App-title {
-  font-size: 1.5em;
+/* page one */
+.page-one {
+  background-image: linear-gradient(to bottom, #311b92, #5567f3);
 }
 
-.App-intro {
-  font-size: large;
+.page-one h1{
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.m-t-100 {
+  margin-top: 100px;
+}
+
+.m-t-89 {
+  margin-top: 89px;
+}
+
+.m-t-45 {
+  margin-top: 30px;
+  font-size: 18px;
+}
+
+.btn-wrap {
+  margin: 116px 0;
+}
+
+.btn-ubscribe {
+  width: 173px;
+  height: 45px;
+  background-color: #63d4bd;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.shape {
+  height: 280px;
+  width: 100%;
+}
+
+.shape .shapeL{
+  transform: rotate(15deg) scale(1.5);
+  border-bottom: 15vw solid #e0e7ff;
+}
+
+.shape .shapeR{
+  transform: rotate(-15deg) scale(1.5);
+  border-bottom: 14vw solid #e0e7ff;
+}
+
+/*page-two*/
+
+.page-two {
+  background: #e0e7ff;
+  /* height: 610px; */
+  position:relative;
+}
+
+.title {
+  width: 122px;
+  height: 25px;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #3a28b4;
+}
+
+.list {
+  margin-top: 31px;
+  list-style: none;
+  padding: 0;
+}
+.list li {
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  color: #3a28b4;
+  margin: 14px;
+}
+
+.list li:before {
+  content: '-';
+  text-indent: -5px;
+}
+
+.page-two .btn-wrap {
+  margin: 20px 0 50px 0;
+}
+
+.shapeC {
+  transform: rotate(-15deg) scale(2);
+  border-bottom: 14vw solid #f8f8f8;
+}
+
+/*page-three*/
+
+.page-three {
+  text-align: right;
+  background: #f8f8f8;
+}
+
+.page-three .btn-wrap {
+  margin: 20px 0 50px 0;
+}
+
+.page-three .shape {
+  height: 110px;
+}
+
+/* page-four */
+
+.text-purple {
+  color: #311b92;
+}
+
+.page-four .btn-wrap {
+  margin: 56px 0 175px;
+}
+
+.input-group {
+  justify-content: center;
+}
+
+.page-four .input-group > .form-control {
+  flex: none;
+}
+
+.inputMail {
+  width: 317px !important;
+  height: 45px;
+  border-radius: 3px;
+  margin-right: 15px;
+}
+
+/* footer */
+.footer {
+  height: 100px;
+  background: #311b92;
 }
