--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ nav {
   width: 317px !important;
   height: 45px;
   border-radius: 3px;
-  margin: 15px;
+  margin: 0 15px 15px 15px;
 }
 
 /* footer */
