--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,4 +1,23 @@
+.modal-header {
+  padding: 0.3rem !important;
+}
+
 .purple {
   color: #fff;
   background: #4527a0;
 }
+
+
+.modal-body label.input {
+  width: 100%;
+}
+
+.modal-body label.input .label {
+  color: #BDBDBD;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+/* .modal-body .btn-wrap {
+  text-align: center;
+} */
