--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,7 +1,7 @@
 .card-wrap {
   border-radius: 10px;
   background-color: #ffffff;
-  box-shadow: 1px 2px 1px 0px #4527a0;
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0, 0.5);
   width: 20%;
   height: 350px;
   margin: 15px;
