--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,3 +1,7 @@
+.modal {
+  top: calc(50% - 200px) !important;
+}
+
 .modal-header {
   padding: 0.3rem !important;
 }
@@ -17,7 +21,3 @@
   margin-bottom: 5px;
   display: inline-block;
 }
-
-/* .modal-body .btn-wrap {
-  text-align: center;
-} */
