--- a/src/sections/personal/Personal.css
+++ b/src/sections/personal/Personal.css
@@ -1,12 +1,17 @@
 .personal-wrap {
   background: #ede7f6;
-  padding: 40px 0;
+  padding: 50px 0 40px 0;
+}
+
+.personal-wrap > .content-wrap {
+  margin-top: 50px;
 }
 
 .personal-wrap .title-wrap .title{
   text-align: center;
   color: #3a28b4;
   font-size: 24px;
+  font-weight: bold;
 }
 
 .personal-wrap .btn-wrap {
