--- a/src/sections/company/Company.css
+++ b/src/sections/company/Company.css
@@ -6,8 +6,8 @@
 
 .company-wrap .title-wrap .title {
   width: 100%;
-  text-align: left;
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .company-wrap .content-wrap {
@@ -36,6 +36,13 @@
   padding-left: 15px;
   margin: 5px 0 20px 0;
   display: inline-block;
+}
+
+.company-wrap .illustration {
+  background-image: url('/assets/img/illustration.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 500px
 }
 
 .company-wrap .btn-wrap {
